external-crates/move/crates/move-compiler/tests/move_check/typing/string_implicits@no_std.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03001]: address with no value
  ┌─ tests/move_check/typing/string_implicits.move:2:19
  │
2 │     fun test_0(): std::ascii::String { std::ascii::string("test") }
  │                   ^^^ address 'std' is not assigned a value

error[E03002]: unbound module
  ┌─ tests/move_check/typing/string_implicits.move:2:19
  │
2 │     fun test_0(): std::ascii::String { std::ascii::string("test") }
  │                   ^^^^^^^^^^ Unbound module 'std::ascii'

error[E03001]: address with no value
  ┌─ tests/move_check/typing/string_implicits.move:2:40
  │
2 │     fun test_0(): std::ascii::String { std::ascii::string("test") }
  │                                        ^^^ address 'std' is not assigned a value

error[E03002]: unbound module
  ┌─ tests/move_check/typing/string_implicits.move:2:40
  │
2 │     fun test_0(): std::ascii::String { std::ascii::string("test") }
  │                                        ^^^^^^^^^^ Unbound module 'std::ascii'

error[E03001]: address with no value
  ┌─ tests/move_check/typing/string_implicits.move:3:19
  │
3 │     fun test_1(): std::ascii::String { "test" }
  │                   ^^^ address 'std' is not assigned a value

error[E03002]: unbound module
  ┌─ tests/move_check/typing/string_implicits.move:3:19
  │
3 │     fun test_1(): std::ascii::String { "test" }
  │                   ^^^^^^^^^^ Unbound module 'std::ascii'

error[E03001]: address with no value
  ┌─ tests/move_check/typing/string_implicits.move:4:19
  │
4 │     fun test_2(): std::string::String { std::string::utf8("test") }
  │                   ^^^ address 'std' is not assigned a value

error[E03002]: unbound module
  ┌─ tests/move_check/typing/string_implicits.move:4:19
  │
4 │     fun test_2(): std::string::String { std::string::utf8("test") }
  │                   ^^^^^^^^^^^ Unbound module 'std::string'

error[E03001]: address with no value
  ┌─ tests/move_check/typing/string_implicits.move:4:41
  │
4 │     fun test_2(): std::string::String { std::string::utf8("test") }
  │                                         ^^^ address 'std' is not assigned a value

error[E03002]: unbound module
  ┌─ tests/move_check/typing/string_implicits.move:4:41
  │
4 │     fun test_2(): std::string::String { std::string::utf8("test") }
  │                                         ^^^^^^^^^^^ Unbound module 'std::string'

error[E03001]: address with no value
  ┌─ tests/move_check/typing/string_implicits.move:5:19
  │
5 │     fun test_3(): std::string::String { "test" }
  │                   ^^^ address 'std' is not assigned a value

error[E03002]: unbound module
  ┌─ tests/move_check/typing/string_implicits.move:5:19
  │
5 │     fun test_3(): std::string::String { "test" }
  │                   ^^^^^^^^^^^ Unbound module 'std::string'
